--- a/tech-category-01.html
+++ b/tech-category-01.html
@@ -562,7 +562,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <br>
-                        <div class="copyright">&copy; TechZONation.ty .All rights reserved.</a>.</div>
+                        <div class="copyright">&copy; TechZONation.ty |All rights reserved.</a>.</div>
                     </div>
                 </div>
             </div><!-- end container -->
