--- a/tech-category-02.html
+++ b/tech-category-02.html
@@ -26,6 +26,7 @@
 
     <!-- FontAwesome Icons core CSS -->
     <link href="font-awesome.min.css" rel="stylesheet">
+     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
