--- a/tech-category-02.html
+++ b/tech-category-02.html
@@ -574,7 +574,7 @@ Have you ever wondered why cloud computing has become so popular these days? Sev
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <br>
-                        <div class="copyright">&copy; TechZONation.ty .All rights reserved.</a>.</div>
+                        <div class="copyright">&copy; TechZONation.ty |All rights reserved.</a>.</div>
                     </div>
                 </div>
             </div><!-- end container -->
