--- a/tech-category-03.html
+++ b/tech-category-03.html
@@ -15,8 +15,8 @@
     <meta name="author" content="">
     
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico/favicon" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/favicon.ico/apple-touch-icon.png">
+    <link rel="shortcut icon" href="favicon.ico/favicon" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="favicon.ico/apple-touch-icon.png">
     
     <!-- Design fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet"> 
