--- a/tech-category-03.html
+++ b/tech-category-03.html
@@ -38,7 +38,7 @@
     <link href="colors.css" rel="stylesheet">
 
     <!-- Version Tech CSS for this template -->
-    <link href="version/tech.css" rel="stylesheet">
+    <link href="tech.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
