--- a/tech-contact.html
+++ b/tech-contact.html
@@ -38,7 +38,7 @@
     <link href="colors.css" rel="stylesheet">
 
     <!-- Version Tech CSS for this template -->
-     <link href="version/tech.css" rel="stylesheet">
+     <link href="tech.css" rel="stylesheet">
      
     
     <!--[if lt IE 9]>
