--- a/tech-index.html
+++ b/tech-index.html
@@ -8,6 +8,7 @@
     <!-- Mobile Metas -->
     
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     
     <!-- Site Metas -->
     <title>TechZONation-home</title>
