--- a/tech-category-02.html
+++ b/tech-category-02.html
@@ -34,7 +34,7 @@
     <!-- Responsive styles for this template -->
     <link href="responsive.css" rel="stylesheet">
 
-    <!-- Colors for this template -->
+    <!-- Colors for this template are -->
     <link href="colors.css" rel="stylesheet">
 
     <!-- Version Tech CSS for this template -->
