--- a/tech-category-02.html
+++ b/tech-category-02.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="min-width="400px"; >
+<html lang="en" style="min-width=400px"; >
 
     <!-- Basic -->
     <meta charset="utf-8">
