--- a/tech-index.html
+++ b/tech-index.html
@@ -120,12 +120,12 @@
 
                     <div class="last-slot">
                         <div class="masonry-box post-media">
-                             <img src="https://static.dezeen.com/uploads/2020/12/aptera-solar-electric-vehicle-design_dezeen_2364_col_4-scaled.jpg"style="min height: 800px;" alt="" class="img-fluid">
+                             <img src="https://images.app.goo.gl/nwbNN6GF93EPrZqV7"style="min height: 800px;" alt="" class="img-fluid">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
                                         <span class="bg-orange"><a href="" title="">Technology</a></span>
-                                        <h4><a href="tech-single.html" title="">Aptera unveils three-wheeled solar electric car that "requires no charging"</a></h4>
+                                        <h4><a href="tech-single.html" title="">World’s fastest computer helps in predicting tsunami using AI</a></h4>
                                         <small><a href="tech-single.html" title="">01 Jan, 2020</a></small>
                                         <small><a>by Vinay</a></small>
                                     </div><!-- end meta -->
