--- a/tech-single.html
+++ b/tech-single.html
@@ -39,7 +39,7 @@
     <link href="colors.css" rel="stylesheet">
 
     <!-- Version Tech CSS for this template -->
-    <link href="version/tech.css" rel="stylesheet">
+    <link href="tech.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -111,15 +111,22 @@
                             </div><!-- end title -->
 
                             <div class="single-post-media">
-                                <img src="tech_menu_08.jpg" alt="" class="img-fluid">
+                                <img src="Image link : https://images.app.goo.gl/nwbNN6GF93EPrZqV7" alt="" class="img-fluid">
                             </div><!-- end media -->
 
                             <div class="blog-content">  
                                 <div class="pp">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dol</p>
+                                    <p>Researchers in japan have developed an AI that would predict tsunami with the help of worlds fastest supercomputer Fugaku.
+Word tsunami was been discovered by japanese where“tsu” meaning harbour, and “nami” meaning wave.In 2011 the country itself was been worst hit by earthquake followed by tsunami.
+ 
+<img src="https://spectrum.ieee.org/image/MzY1NDg0NQ.jpeg">
+
+Fugaku supercomputer, which generated 20,000 possible outcomes was been used by Japanese researchers to develop the AI that predicts tsunami. This 20000 outcome generation possibility of the supercomputer was used to train the AI to predict flooding conditions before a tsunami strikes land by analyzing offshore waveforms at the time of an earthquake.
+And one of the great feature of this AI technology is that it could be operated on ordinary PCs , this feature makes this technology easy to use while tsunami predictions.The AI developed is highly accurate in predicting tsunamis i.e. in the manner of seconds.
+Even technology provides with the effect the tsunamis have on the buildings and various constructions.   
+
+
+</p>
 
                                     <h3><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                     tempor incididunt ut labore et dolore magna aliqua.</strong></h3>
