--- a/tech-index.html
+++ b/tech-index.html
@@ -120,7 +120,7 @@
 
                     <div class="last-slot">
                         <div class="masonry-box post-media">
-                             <img src="https://images.app.goo.gl/nwbNN6GF93EPrZqV7"style="min height: 800px;" alt="" class="img-fluid">
+                             <img src="https://images.app.goo.gl/nwbNN6GF93EPrZqV7"alt="" class="img-fluid">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
