--- a/tech-index.html
+++ b/tech-index.html
@@ -120,11 +120,11 @@
 
                     <div class="last-slot">
                         <div class="masonry-box post-media">
-                             <img src="https://images.app.goo.gl/nwbNN6GF93EPrZqV7"alt="" class="img-fluid">
+                             <img src=" https://images.app.goo.gl/nwbNN6GF93EPrZqV7 " alt="" class="img-fluid">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
-                                        <span class="bg-orange"><a href="" title="">Technology</a></span>
+                                        <span class="bg-orange"><a href="tech-single.html" title="">Technology</a></span>
                                         <h4><a href="tech-single.html" title="">World’s fastest computer helps in predicting tsunami using AI</a></h4>
                                         <small><a href="tech-single.html" title="">01 Jan, 2020</a></small>
                                         <small><a>by Vinay</a></small>
