--- a/tech-index.html
+++ b/tech-index.html
@@ -120,7 +120,7 @@
 
                     <div class="last-slot">
                         <div class="masonry-box post-media">
-                             <img src=" https://images.app.goo.gl/nwbNN6GF93EPrZqV7.jpg " alt="" class="img-fluid">
+                             <img src="https://cdn.theatlantic.com/assets/media/img/photo/2016/03/5-years-since-the-2011-great-east-j/q01_RTR2JTXO-1/original.jpg " alt="" class="img-fluid">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
