--- a/tech-single.html
+++ b/tech-single.html
@@ -111,7 +111,7 @@
                             </div><!-- end title -->
 
                             <div class="single-post-media">
-                                <img src="https://images.app.goo.gl/nwbNN6GF93EPrZqV7" alt="" class="img-fluid">
+                                <img src="https://cdn.theatlantic.com/assets/media/img/photo/2016/03/5-years-since-the-2011-great-east-j/q01_RTR2JTXO-1/original.jpg" alt="" class="img-fluid">
                             </div><!-- end media -->
 
                             <div class="blog-content">  
@@ -119,7 +119,7 @@
                                     <p>Researchers in japan have developed an AI that would predict tsunami with the help of worlds fastest supercomputer Fugaku.
 Word tsunami was been discovered by japanese where“tsu” meaning harbour, and “nami” meaning wave.In 2011 the country itself was been worst hit by earthquake followed by tsunami.
  
-<img src="https://spectrum.ieee.org/image/MzY1NDg0NQ.jpeg" style="min-width:20px;">
+
 
 Fugaku supercomputer, which generated 20,000 possible outcomes was been used by Japanese researchers to develop the AI that predicts tsunami. This 20000 outcome generation possibility of the supercomputer was used to train the AI to predict flooding conditions before a tsunami strikes land by analyzing offshore waveforms at the time of an earthquake.
 And one of the great feature of this AI technology is that it could be operated on ordinary PCs , this feature makes this technology easy to use while tsunami predictions.The AI developed is highly accurate in predicting tsunamis i.e. in the manner of seconds.
@@ -137,7 +137,7 @@ Even technology provides with the effect the tsunamis have on the buildings and 
 
                                 </div><!-- end pp -->
 
-                                <img src="tech_menu_09.jpg" alt="" class="img-fluid img-fullwidth">
+                                <img src="https://i.ytimg.com/vi/3g_MMHoTeF0/maxresdefault.jpg" alt="" class="img-fluid img-fullwidth">
 
                                 <div class="pp">
                                     <h3><strong>Nam non velit est. Sed lobortis arcu vitae nunc molestie consectetur. Nam eget neque ac ex fringilla dignissim eu ac est. Nunc et nisl vel odio posuere. </strong></h3>
