--- a/tech-index.html
+++ b/tech-index.html
@@ -120,13 +120,13 @@
 
                     <div class="last-slot">
                         <div class="masonry-box post-media">
-                             <img src="https://cdn.theatlantic.com/assets/media/img/photo/2016/03/5-years-since-the-2011-great-east-j/q01_RTR2JTXO-1/original.jpg " alt="" class="img-fluid">
+                             <img src="https://media.wired.com/photos/5e978606056547000ac5e8d9/1:1/w_1800,h_1800,c_limit/Gear-Moto-G-Stylus-front,-back,-and-stylus-SOURCE-Motorola.jpg" alt="" class="img-fluid">
                              <div class="shadoweffect">
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
                                         <br><br>
                                         <span class="bg-orange"><a href="tech-single.html" title="">Technology</a></span>
-                                        <h4><a href="tech-single.html" title="">World’s fastest computer helps in predicting tsunami using AI</a></h4>
+                                        <h4><a href="tech-single.html" title="">Moto G Stylus (2021), Moto G Power (2021),  Motorola One 5G Ace Launched</a></h4>
                                         <small><a href="tech-single.html" title="">01 Jan, 2020</a></small>
                                         <small><a>by Vinay</a></small>
                                     </div><!-- end meta -->
